--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-   
+   <!-- Add this to your HTML head section -->
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3e%3cdefs%3e%3cstyle%3e.cls-1%7bfill:%23007cb6%7d.cls-2%7bfill:%2372a300%7d%3c/style%3e%3c/defs%3e%3ccircle class='cls-1' cx='16' cy='6' r='3'/%3e%3ccircle class='cls-2' cx='8' cy='16' r='2.5'/%3e%3ccircle class='cls-2' cx='24' cy='16' r='2.5'/%3e%3ccircle class='cls-2' cx='5' cy='26' r='2'/%3e%3ccircle class='cls-2' cx='11' cy='26' r='2'/%3e%3ccircle class='cls-2' cx='21' cy='26' r='2'/%3e%3ccircle class='cls-2' cx='27' cy='26' r='2'/%3e%3cline x1='16' y1='9' x2='16' y2='12' stroke='%23333' stroke-width='2'/%3e%3cline x1='12' y1='12' x2='20' y2='12' stroke='%23333' stroke-width='2'/%3e%3cline x1='12' y1='12' x2='8' y2='14' stroke='%23333' stroke-width='2'/%3e%3cline x1='20' y1='12' x2='24' y2='14' stroke='%23333' stroke-width='2'/%3e%3cline x1='8' y1='18' x2='8' y2='22' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='6' y1='22' x2='10' y2='22' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='6' y1='22' x2='5' y2='24' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='10' y1='22' x2='11' y2='24' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='24' y1='18' x2='24' y2='22' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='22' y1='22' x2='26' y2='22' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='22' y1='22' x2='21' y2='24' stroke='%23333' stroke-width='1.5'/%3e%3cline x1='26' y1='22' x2='27' y2='24' stroke='%23333' stroke-width='1.5'/%3e%3c/svg%3e">
     <!-- Remove the old one and add this specific version -->
 <script src="https://unpkg.com/3d-force-graph@1.71.4/dist/3d-force-graph.min.js"></script>
 
