--- a/index.html
+++ b/index.html
@@ -10469,10 +10469,10 @@ html += `
         <div style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
             <div>
                 <span style="font-size: 2.5rem; font-weight: bold; color: #f44336;">${criticalPages.length}</span>
-                <span style="font-size: 1.2rem; color: #856404; margin-left: 10px;">pages are over 2 years old and require immediate attention</span>
+                <span style="font-size: 1.2rem; color: #856404; margin-left: 10px;">pages are over 2 years old and may require attention</span>
             </div>
             <div style="color: #856404; font-size: 0.95rem;">
-                <strong>Priority:</strong> These pages likely contain outdated information and should be reviewed urgently
+                <strong>Priority:</strong> These pages might contain outdated information and should be reviewed
             </div>
         </div>
     </div>
