--- a/index.html
+++ b/index.html
@@ -10747,7 +10747,7 @@ ${cat.stale > 0 ? `<div style="width: ${stalePercentage}%; background: #b71c1c; 
                     </div>
                     
                     <div>
-                        <div style="font-weight: 500; color: #1f4788; margin-bottom: 8px;">⚠️ Needs Attention:</div>
+                        <div style="font-weight: 500; color: #1f4788; margin-bottom: 8px;">⚠️ May Need Attention:</div>
                         <div style="display: flex; flex-direction: column; gap: 8px;">
         `;
         
