--- a/index.html
+++ b/index.html
@@ -10453,7 +10453,7 @@ pageDetails.newest.forEach((page, index) => {
         
 <!-- Pages Requiring Immediate Attention -->
 <div style="margin-bottom: 30px;">
-    <h3 style="color: #1f4788; margin-bottom: 20px;">🚨 Action Required - Critical Updates</h3>
+    <h3 style="color: #1f4788; margin-bottom: 20px;">🚨 Action Required - Review for possible content updates</h3>
     
     <!-- Get critical pages (2+ years old) -->
 `;
