--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script async defer src="https://apis.google.com/js/api.js"></script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="gsc-integration-module.js"></script>
+<script src="standalone-ga4-integration.js"></script>
 
    
     <style>
