--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <script src="gsc-integration-module.js"></script>
 <script src="standalone-ga4-integration.js"></script>
+<script src="combined-tooltip-integration.js"></script>
 
    
     <style>
