--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="gsc-integration-module.js"></script>
 <script src="standalone-ga4-integration.js"></script>
 <script src="combined-tooltip-integration.js"></script>
+<script src="enhanced-url-matching.js"></script>
 
    
     <style>
