--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script src="standalone-ga4-integration.js"></script>
 <script src="combined-tooltip-integration.js"></script>
 <script src="enhanced-url-matching.js"></script>
+<script src="enhanced-citizens-dashboard.js"></script>
 
    
     <style>
