--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <script src="combined-tooltip-integration.js"></script>
 <script src="enhanced-url-matching.js"></script>
 <script src="enhanced-citizens-dashboard.js"></script>
+<script src="unified-citizens-dashboard.js"></script>
+	
 
    
     <style>
