--- a/index.html
+++ b/index.html
@@ -3819,7 +3819,7 @@ body.dark-theme .action-sheet-button.primary {
     gap: 8px;
     padding: 6px 0;
     font-size: 0.9rem;
-    color: #666;
+    color: #ffffff;
 }
 
 .metadata-item:not(:last-child) {
