--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         /* Improved Header Layout */
         .header {
-            background: linear-gradient(135deg, var(--secondary) 0%, var(--secondary-dark) 100%);
+        	background: linear-gradient(135deg, #5a8200 0%, #72A300 100%);
             color: white;
             position: relative;
             overflow: hidden;
