--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script src="combined-tooltip-integration.js"></script>
 <script src="enhanced-url-matching.js"></script>
 <script src="enhanced-citizens-dashboard.js"></script>
+<script src="dashboard-glossary.js"></script>
 
 	
 
