--- a/index.html
+++ b/index.html
@@ -88,21 +88,45 @@
 
         /* Improved Header Layout */
         .header {
-        	background: linear-gradient(135deg, #5a8200 0%, #72A300 100%);
-            color: white;
-            position: relative;
-            overflow: hidden;
-        }
+    background: linear-gradient(135deg, 
+        #14532d 0%,    /* Dark forest green */
+        #166534 25%,   /* Deep green */
+        #22c55e 75%,   /* Bright green */
+        #72A300 100%   /* Your brand green */
+    );
+    color: white;
+    position: relative;
+    overflow: hidden;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
 
-        .header::before {
+.header::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="25" cy="25" r="2" fill="white" opacity="0.1"/><circle cx="75" cy="75" r="1.5" fill="white" opacity="0.1"/><circle cx="50" cy="10" r="1" fill="white" opacity="0.1"/></svg>');
-    background-size: 100px 100px;
+    background: 
+        /* Grid pattern with white lines for contrast */
+        url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="8" height="8" patternUnits="userSpaceOnUse"><path d="M 8 0 L 0 0 0 8" fill="none" stroke="white" stroke-width="0.5" opacity="0.12"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>'),
+        /* Geometric patterns with lighter green */
+        linear-gradient(45deg, transparent 48%, rgba(255, 255, 255, 0.08) 49%, rgba(255, 255, 255, 0.08) 51%, transparent 52%),
+        /* Radial glow effects with complementary colors */
+        radial-gradient(circle at 25% 75%, rgba(255, 255, 255, 0.15) 0%, transparent 50%),
+        radial-gradient(circle at 75% 25%, rgba(34, 197, 94, 0.2) 0%, transparent 50%);
+    background-size: 40px 40px, 80px 80px, 600px 600px, 800px 800px;
+}
+
+	    .header::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    backdrop-filter: blur(1px);
+    background: rgba(0, 0, 0, 0.08);
 }
 
         .header-content {
@@ -1193,8 +1217,30 @@ body.dark-theme .tooltip-header > span:first-child {
         }
 
         body.dark-theme .header {
-            background: linear-gradient(135deg, #007cb6 0%, #005a87 5%);
-        }
+    background: linear-gradient(135deg, 
+        #0f172a 0%,    /* Very dark slate */
+        #1e293b 25%,   /* Dark slate */
+        #334155 75%,   /* Medium slate */
+        #475569 100%   /* Lighter slate */
+    );
+    border-bottom: 1px solid rgba(114, 163, 0, 0.3);
+}
+
+body.dark-theme .header::before {
+    background: 
+        /* Darker grid pattern */
+        url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grid" width="8" height="8" patternUnits="userSpaceOnUse"><path d="M 8 0 L 0 0 0 8" fill="none" stroke="white" stroke-width="0.5" opacity="0.06"/></pattern></defs><rect width="100" height="100" fill="url(%23grid)"/></svg>'),
+        /* Subtle geometric patterns */
+        linear-gradient(45deg, transparent 48%, rgba(114, 163, 0, 0.08) 49%, rgba(114, 163, 0, 0.08) 51%, transparent 52%),
+        /* Green accent glows */
+        radial-gradient(circle at 25% 75%, rgba(114, 163, 0, 0.12) 0%, transparent 50%),
+        radial-gradient(circle at 75% 25%, rgba(0, 124, 182, 0.08) 0%, transparent 50%);
+    background-size: 40px 40px, 80px 80px, 600px 600px, 800px 800px;
+}
+
+body.dark-theme .header::after {
+    background: rgba(0, 0, 0, 0.15); /* Slightly darker overlay */
+}
 
        body.dark-theme .upload-section {
     background: var(--gray-800);
