--- a/index.html
+++ b/index.html
@@ -5313,7 +5313,7 @@ body.dark-theme .mobile-control-grid.three-col .control-btn.active {
                     
                     <div class="header-text">
                         <h1>Site Intelligence Dashboard</h1>
-                        <p>Transform your sitemap into actionable insights with advanced analytics, performance monitoring, and comprehensive reporting</p>
+                        <p>Site visualisation with insights, analytics, performance monitoring, and reporting</p>
                     </div>
                 </div>
                
